--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ss.ftpserver">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
     <application
-        android:name="com.ss.ftpserver.MyApplication"
+        android:name=".gui.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FtpServer">
+        <service
+            android:name=".ftpService.FtpService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
-            android:name="com.ss.ftpserver.MainActivity"
+            android:name=".gui.MainActivity"
+            android:launchMode="singleTask"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
